# Capstone-Project-GitFlame-CodePilot

./: .env.example  .gitignore  README.md  docker-compose.yml  issue_payload.json
recommendations/: .dockerignore  .gitignore  Dockerfile  README.md  agent_engine_report.md  deployment_guide.md  generated_files_example.json  model_comparison.md  my_request.json  pyproject.toml  rag_vector_search_direction.md  recommendation_prompt.md  recommendation_schema.json  space_start.sh
recommendations/experiments/: README.md  __init__.py  run_benchmark.py
recommendations/experiments/autogen/: README.md  run_benchmark.py
recommendations/experiments/autogen/fixtures/: 01_token_expiration.json  02_rate_limit.json  03_cache_invalidation.json  (+2 more)
recommendations/experiments/fixtures/: architecture.json  maintainability.json  web_api.json
recommendations/experiments/requests/: web_api_request.json
recommendations/experiments/results/: initial_baseline_result.md  model_benchmark.json
recommendations/src/agent_engine/: __init__.py  app.py  context.py  errors.py  llm_client.py  loop.py  models.py  plan_validator.py  prompt.py  rag.py  repository.py  service.py  settings.py  tools.py
recommendations/src/recommendation_service/: __init__.py  app.py  config.py  models.py  ollama_client.py  prompt.py  service.py  settings.py
recommendations/tests/: __init__.py  conftest.py  test_agent_api.py  test_agent_llm_client.py  test_agent_models.py  test_agent_tools.py  test_api.py  test_benchmark.py  test_config.py  test_ollama_client.py  test_plan_validator.py  test_prompt.py
(+200 files in other folders)
